; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/wusbcore/extr_wusbhc.c_wusb_trust_timeout_store.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/wusbcore/extr_wusbhc.c_wusb_trust_timeout_store.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.device_attribute = type { i32 }
%struct.wusbhc = type { i32, i32 }

@ENOSYS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [3 x i8] c"%u\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@wusbd = common dso_local global i32 0, align 4
@CONFIG_HZ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, %struct.device_attribute*, i8*, i64)* @wusb_trust_timeout_store to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wusb_trust_timeout_store(%struct.device* %0, %struct.device_attribute* %1, i8* %2, i64 %3) #0 {
  %5 = alloca %struct.device*, align 8
  %6 = alloca %struct.device_attribute*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca %struct.wusbhc*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %5, align 8
  store %struct.device_attribute* %1, %struct.device_attribute** %6, align 8
  store i8* %2, i8** %7, align 8
  store i64 %3, i64* %8, align 8
  %12 = load %struct.device*, %struct.device** %5, align 8
  %13 = call %struct.wusbhc* @usbhc_dev_to_wusbhc(%struct.device* %12)
  store %struct.wusbhc* %13, %struct.wusbhc** %9, align 8
  %14 = load i32, i32* @ENOSYS, align 4
  %15 = sub nsw i32 0, %14
  store i32 %15, i32* %10, align 4
  %16 = load i8*, i8** %7, align 8
  %17 = call i32 @sscanf(i8* %16, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32* %11)
  store i32 %17, i32* %10, align 4
  %18 = load i32, i32* %10, align 4
  %19 = icmp ne i32 %18, 1
  br i1 %19, label %20, label %23

20:                                               ; preds = %4
  %21 = load i32, i32* @EINVAL, align 4
  %22 = sub nsw i32 0, %21
  store i32 %22, i32* %10, align 4
  br label %41

23:                                               ; preds = %4
  %24 = load i32, i32* %11, align 4
  %25 = load %struct.wusbhc*, %struct.wusbhc** %9, align 8
  %26 = getelementptr inbounds %struct.wusbhc, %struct.wusbhc* %25, i32 0, i32 0
  store i32 %24, i32* %26, align 4
  %27 = load %struct.wusbhc*, %struct.wusbhc** %9, align 8
  %28 = getelementptr inbounds %struct.wusbhc, %struct.wusbhc* %27, i32 0, i32 1
  %29 = call i32 @cancel_delayed_work(i32* %28)
  %30 = load i32, i32* @wusbd, align 4
  %31 = call i32 @flush_workqueue(i32 %30)
  %32 = load i32, i32* @wusbd, align 4
  %33 = load %struct.wusbhc*, %struct.wusbhc** %9, align 8
  %34 = getelementptr inbounds %struct.wusbhc, %struct.wusbhc* %33, i32 0, i32 1
  %35 = load i32, i32* %11, align 4
  %36 = load i32, i32* @CONFIG_HZ, align 4
  %37 = mul i32 %35, %36
  %38 = udiv i32 %37, 1000
  %39 = udiv i32 %38, 2
  %40 = call i32 @queue_delayed_work(i32 %32, i32* %34, i32 %39)
  br label %41

41:                                               ; preds = %23, %20
  %42 = load i32, i32* %10, align 4
  %43 = icmp slt i32 %42, 0
  br i1 %43, label %44, label %47

44:                                               ; preds = %41
  %45 = load i32, i32* %10, align 4
  %46 = sext i32 %45 to i64
  br label %49

47:                                               ; preds = %41
  %48 = load i64, i64* %8, align 8
  br label %49

49:                                               ; preds = %47, %44
  %50 = phi i64 [ %46, %44 ], [ %48, %47 ]
  %51 = trunc i64 %50 to i32
  ret i32 %51
}

declare dso_local %struct.wusbhc* @usbhc_dev_to_wusbhc(%struct.device*) #1

declare dso_local i32 @sscanf(i8*, i8*, i32*) #1

declare dso_local i32 @cancel_delayed_work(i32*) #1

declare dso_local i32 @flush_workqueue(i32) #1

declare dso_local i32 @queue_delayed_work(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
